<resources>
    <string name="app_name" translatable="false">MyTransport</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Register new user</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="dont_have_account">Don\'t have account</string>
    <string name="login">Login</string>
    <string name="sign_up">SignUp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="select_route">Select a route</string>
    <string name="show_route">Show route</string>
    <string name="return_to_list">Return</string>
    <string name="cancel">Cancel</string>
    <string name="register">Register</string>
    <string name="route">Route</string>
    <string name="go_to_routes">Go to Routes</string>
    <string name="go_to_about">About</string>
    <string name="logout">Logout</string>
    <string name="select_schedule">Select a Schedule</string>
    <string name="create_schedule">Create</string>
    <string name="about_developers">Developers</string>
    <string name="about_version">Version 1.4.10</string>
    <string name="home_go_to_routes">Go to Routes</string>
    <string name="home_go_to_schedule">Go to Schedules</string>
    <string name="home_logout">Logout</string>
    <string name="schedule_latitude">Latitude</string>
    <string name="schedule_longitude">Latitude</string>
    <string name="schedule_destiny">Destiny</string>
    <string name="schedule_origin">Origin</string>
    <string name="schedule_schedule">Schedule</string>
    <string name="schedule_date">Date</string>
    <string name="schedule_hour">Hour</string>
    <string name="schedule_save">Save</string>
    <string name="schedule_delete">Delete</string>
    <string name="signup_new">Register new Account</string>
    <string name="schedule_edit">Edit Schedule</string>
</resources>