<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:background="#08C6AC"
    android:outlineProvider="none"
    android:scrollbarDefaultDelayBeforeFade="0"
    android:scrollbarFadeDuration="0"
    android:scrollbarSize="0dp"
    android:scrollbarThumbHorizontal="@color/transparent"
    android:scrollbarThumbVertical="@color/transparent"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="0dp"
    app:cardElevation="0dp"
    app:cardMaxElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#08C6AC">

        <TextView
            android:id="@+id/tvScheduleDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:background="#08C6AC"
            android:textAlignment="viewStart"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvScheduleDateLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvScheduleDateLabel"
            app:layout_constraintTop_toTopOf="@+id/tvScheduleDateLabel"
            tools:text="12314" />

        <TextView
            android:id="@+id/tvScheduleDateLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="#08C6AC"
            android:text="@string/schedule_date"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#08C6AC"
            app:cardBackgroundColor="#08C6AC"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp"
            app:cardPreventCornerOverlap="false"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="@+id/tvScheduleDate"
            app:layout_constraintStart_toStartOf="@+id/tvScheduleDateLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvScheduleDate">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="#08C6AC"
                android:dividerHeight="0dp"
                android:elevation="0dp"
                android:fadingEdgeLength="0dp"
                android:orientation="horizontal"
                android:visibility="visible"
                android:weightSum="2">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardBackgroundColor="#08C6AC">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tvOriginLongitude"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/schedule_longitude"
                            android:textSize="18sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/tvOriginLatitude"
                            app:layout_constraintStart_toStartOf="@+id/tvOriginLatitude"
                            app:layout_constraintTop_toBottomOf="@+id/tvOriginLatitude" />

                        <TextView
                            android:id="@+id/tvOriginLatitude"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:text="@string/schedule_latitude"
                            android:textSize="18sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/tvScheduleOrigin"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tvScheduleOrigin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="16dp"
                            android:text="@string/schedule_origin"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/tvOriginLatitude"
                            android:textSize="18sp" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardBackgroundColor="#08C6AC"
                    app:cardCornerRadius="0dp"
                    app:cardElevation="0dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tvDestinyLatitude"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:text="@string/schedule_latitude"
                            android:textSize="18sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/tvScheduleDestiny"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tvDestinyLongitude"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/schedule_longitude"
                            android:textSize="18sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/tvDestinyLatitude"
                            app:layout_constraintStart_toStartOf="@+id/tvDestinyLatitude"
                            app:layout_constraintTop_toBottomOf="@+id/tvDestinyLatitude" />

                        <TextView
                            android:id="@+id/tvScheduleDestiny"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="16dp"
                            android:text="@string/schedule_destiny"
                            android:textSize="18sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/tvDestinyLatitude" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btEditSchedule"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:background="#212B37"
            android:text="@string/schedule_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tvScheduleDate"
            app:layout_constraintStart_toStartOf="@+id/tvScheduleDateLabel"
            app:layout_constraintTop_toBottomOf="@+id/cardView3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>